added article/location suggestion to existing lines

--- a/templates/incoming/index.twig.html
+++ b/templates/incoming/index.twig.html
@@ -12,7 +12,7 @@
     {% elseif log == "moveNOK" %}
         <p class="error">La réception n'a pas pu été créée.</p>    
     {% elseif log == "deleteOK" %}
-        <p class="error">La réception a bien été supprimée.</p>     
+        <p class="valid">La réception a bien été supprimée.</p>     
     {% elseif log == "deleteNOK" %}
         <p class="error">La réception n'a pas pu été supprimée.</p>     
     {% endif %}
