--- a/public/css/style.css
+++ b/public/css/style.css
@@ -512,8 +512,14 @@ footer p {
         font-weight: bold;
     }    
 
-    /* Stock Location */
+    /* Stock Reserved */
     #stockTable td:nth-of-type(4):before {
+        content: 'Réservée : ';
+        font-weight: bold;
+    }   
+
+    /* Stock Location */
+    #stockTable td:nth-of-type(5):before {
         content: 'Emplacement : ';
         font-weight: bold;
     }    
