added delete action for outgoing

--- a/templates/outgoing/index.twig.html
+++ b/templates/outgoing/index.twig.html
@@ -12,9 +12,9 @@
     {% elseif log == "moveNOK" %}
         <p class="error">L'expédition n'a pas pu été créée.</p>    
     {% elseif log == "deleteOK" %}
-        <p class="error">L'expédition a bien été supprimée.</p>     
+        <p class="valid">L'expédition a bien été supprimée.</p>     
     {% elseif log == "deleteNOK" %}
-        <p class="error">L'expédiotion n'a pas pu été supprimée.</p>     
+        <p class="error">L'expédition n'a pas pu été supprimée.</p>     
     {% endif %}
     <section>
         <p>Saisir une <a href="/outgoing/edit">Expédition Client</a></p>
