enhanced CSS for orderRow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -470,6 +470,10 @@ footer p {
         margin: 10px 0;
     }
 
+    .orderRow {
+        flex-direction: column;
+    }
+
     table {
         width: 100%;
     }
