--- a/public/css/style.css
+++ b/public/css/style.css
@@ -493,6 +493,11 @@ footer p {
         display: none;
     }
 
+    /* pageCount header error fix */
+    tr:last-of-type td:before {
+        display: none;
+    }
+
     /* Article ID */
     #articleTable td:nth-of-type(1):before {
         content: 'ID : ';
@@ -529,17 +534,11 @@ footer p {
         font-weight: bold;
     }    
 
-    /* Stock Reserved */
-    #stockTable td:nth-of-type(4):before {
-        content: 'Réservée : ';
-        font-weight: bold;
-    }   
-
     /* Stock Location */
-    #stockTable td:nth-of-type(5):before {
+    #stockTable td:nth-of-type(4):before {
         content: 'Emplacement : ';
         font-weight: bold;
-    }    
+    }   
 
     /* Incoming ID */
     #incomingTable td:nth-of-type(1):before {
@@ -571,28 +570,62 @@ footer p {
         font-weight: bold;
     }   
 
+    /* Outgoing ID */
+    #outgoingTable td:nth-of-type(1):before {
+        content: 'ID : ';
+        font-weight: bold;
+    }    
+
+    /* Outgoing Reference */
+    #outgoingTable td:nth-of-type(2):before {
+        content: 'Référence : ';
+        font-weight: bold;
+    }    
+
+    /* Outgoing Date */
+    #outgoingTable td:nth-of-type(3):before {
+        content: 'Date : ';
+        font-weight: bold;
+    }    
+
+    /* Outgoing Status */
+    #outgoingTable td:nth-of-type(4):before {
+        content: 'Statut : ';
+        font-weight: bold;
+    }   
+
+    /* Outgoing Action */
+    #outgoingTable td:nth-of-type(5):before {
+        content: 'Action : ';
+        font-weight: bold;
+    }   
+
     /* userTable ID */
     #userTable td:nth-of-type(1):before {
         content: 'ID : ';
         font-weight: bold;
+        display: contents;
     }    
 
     /* userTable Username */
     #userTable td:nth-of-type(2):before {
         content: "Nom d'utilisateur : ";
         font-weight: bold;
+        display: contents;
     }    
 
     /* userTable Role */
     #userTable td:nth-of-type(3):before {
         content: 'Role : ';
         font-weight: bold;
+        display: contents;
     }    
 
     /* userTable Action */
     #userTable td:nth-of-type(4):before {
         content: 'Action : ';
         font-weight: bold;
+        display: contents;
     }   
 
     /* locationTable ID */
@@ -629,6 +662,6 @@ footer p {
     #locationTable td:nth-of-type(6):before {
         content: 'Action : ';
         font-weight: bold;
-    } 
+    }
 }
 /* end RESPONSIVE */
