added csv export for stocks

--- a/templates/stock/index.twig.html
+++ b/templates/stock/index.twig.html
@@ -50,6 +50,8 @@
                                 {% if nextPage is defined %} 
                                     <a href="/stock/index/{{ nextPage }}">{{ nextPage }}</a>
                                 {% endif %}
+                                <br>
+                                <a href="/stock/export">Exporter un fichier .CSV</a>
                             </td>
                         </tr>
                     {% endif %}
