added history for articles

--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -61,6 +61,7 @@
                                 <td>
                                     <ul class="article-edit">
                                         <li><a href="/article/show/{{ article.id }}" class="button icon edit-icon">Editer</a></li>
+                                        <li><a href="/article/history/{{ article.id }}" class="button icon history-icon">Historique</a></li>
                                         <li><a href="/article/delete/{{ article.id }}" class="button icon delete-icon" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer cet article ?');">Supprimer</a></li>
                                     </ul>
                                 </td>
