--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,6 +210,12 @@ tr:nth-of-type(even) {
     left: 6px;
 }
 
+.history-icon::before {
+    content: "\f1da";
+    color: white;
+    left: 6px;
+}
+
 .view-icon::before {
     content: "\f06e";
     color: white;
@@ -667,6 +673,42 @@ footer p {
     /* locationTable Action */
     #locationTable td:nth-of-type(6):before {
         content: 'Action : ';
+        font-weight: bold;
+    }
+
+    /* historyTable CreatedAt */
+    #historyTable td:nth-of-type(1):before {
+        content: 'Date : ';
+        font-weight: bold;
+    }    
+
+    /* historyTable Reference */
+    #historyTable td:nth-of-type(2):before {
+        content: "Référence : ";
+        font-weight: bold;
+    }    
+
+    /* historyTable Article */
+    #historyTable td:nth-of-type(3):before {
+        content: 'Article : ';
+        font-weight: bold;
+    }    
+
+    /* historyTable Type */
+    #historyTable td:nth-of-type(4):before {
+        content: 'Type : ';
+        font-weight: bold;
+    } 
+
+    /* locationTable Location */
+    #historyTable td:nth-of-type(5):before {
+        content: 'Emplacement : ';
+        font-weight: bold;
+    }    
+
+    /* historyTable Qty */
+    #historyTable td:nth-of-type(6):before {
+        content: 'Quantité : ';
         font-weight: bold;
     }
 }
